projetGL/src/test/deca/codegen/valid/ourTest/test_unary_int.deca
// Description:
//    Test de l'utilisation de l'opérateur unary sur int
// Resultats:
//    -47 47 -47
{
    int a=47;
    print(-a," ");
    if(--a==47){
        print(a," ");
    }
    print(---a," ");
}