projetGL/src/test/deca/codegen/invalid/test_modulo_zero_print.deca
// Description :
//    Test de l'opération modulo avec un diviseur nul sur un entier dans un print
//
// Resultats:
//    Erreur : Modulo par zero

{
    print(2%0);
}